# portfolio-backend

./: Context.txt  ask-ai.py  main.py  pyproject.toml  requirements.txt
chroma_storage/: chroma.sqlite3
